--- a/requirements.txt
+++ b/requirements.txt
@@ -2,22 +2,30 @@
 # Combining TensorHouse and BPTK-Py dependencies
 
 # Core Dependencies
-ipywidgets>=7.7.0
-jupyter>=1.0.0
-jupyterlab>=3.3.0
-matplotlib>=3.5.1
 numpy>=1.20.0
 pandas>=1.4.0
+matplotlib>=3.5.1
 seaborn>=0.11.2
+
+# Machine Learning and Deep Learning
+torch>=1.10.0
+scikit-learn>=1.0.2
+
+# System Dynamics
+bptk-py>=1.1.0
+
+# Jupyter and Visualization
+jupyter>=1.0.0
+ipywidgets>=7.7.0
+
+# Development Tools
+pytest>=6.0.0
+black>=21.0.0
+flake8>=3.9.0
 
 # Machine Learning and Data Science
 lightgbm>=3.3.2
-scikit-learn>=1.0.2
 statsmodels>=0.13.2
-
-# Deep Learning
-tensorflow>=2.8.0
-torch>=1.10.0
 
 # Reinforcement Learning
 ray[rllib]>=1.13.0
@@ -31,6 +39,3 @@ pymc>=4.0.0
 
 # Generative AI
 langchain>=0.0.139
-
-# System Dynamics and Agent-Based Modeling
-bptk-py>=1.1.0
